--- a/src/main/resources/gr/uop/asteras/ASTERAS.fxml
+++ b/src/main/resources/gr/uop/asteras/ASTERAS.fxml
@@ -6,11 +6,11 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
 
 <BorderPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: grey;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gr.uop.asteras.MainController">
    <top>
@@ -42,19 +42,19 @@
                   <Font name="DejaVu Sans Bold" size="48.0" />
                </font>
             </Label>
-            <TextField fx:id="searchTextField" maxWidth="400.0" prefWidth="300.0" promptText="Search">
+            <TextField fx:id="searchTextField" maxWidth="400.0" onKeyPressed="#enterPressed" prefWidth="300.0" promptText="Search">
                <font>
                   <Font name="DejaVu Sans Mono Oblique" size="14.0" />
                </font>
             </TextField>
             <HBox alignment="CENTER" spacing="15.0" VBox.vgrow="NEVER">
                <children>
-                  <Button maxWidth="150.0" mnemonicParsing="false" onAction="#search" prefWidth="150.0" text="Search">
+                  <Button maxWidth="150.0" mnemonicParsing="false" onAction="#search" prefHeight="30.0" prefWidth="150.0" text="Search">
                      <font>
-                        <Font name="DejaVu Sans Mono Bold Oblique" size="14.0" />
+                        <Font name="Calibri" size="14.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#lucky" text="I'm feeling lucky">
+                  <Button maxWidth="150.0" mnemonicParsing="false" onAction="#lucky" prefHeight="30.0" prefWidth="150.0" text="I'm feeling lucky">
                      <font>
                         <Font name="DejaVu Sans Mono Bold" size="14.0" />
                      </font>
@@ -64,4 +64,11 @@
          </children>
       </VBox>
    </center>
+   <bottom>
+      <TitledPane expanded="false" style="-fx-background-color: grey;" text="Advanced Settings" BorderPane.alignment="CENTER">
+         <content>
+            <HBox fx:id="advancedSettingsBox" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="15.0" style="-fx-background-color: grey;" />
+         </content>
+      </TitledPane>
+   </bottom>
 </BorderPane>
