--- a/src/main/resources/gr/uop/asteras/ASTERAS.fxml
+++ b/src/main/resources/gr/uop/asteras/ASTERAS.fxml
@@ -21,19 +21,10 @@
           <Menu mnemonicParsing="false" text="File">
             <items>
                   <MenuItem mnemonicParsing="false" onAction="#addBibFile" text="Add Bib File" />
+                  <MenuItem mnemonicParsing="false" onAction="#addZipFile" text="Add Zip File" />
                   <MenuItem mnemonicParsing="false" onAction="#deleteBibFile" text="Delete Bib FIle" />
                   <SeparatorMenuItem mnemonicParsing="false" />
               <MenuItem mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
             </items>
           </Menu>
         </menus>
